--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
                             </div>
                         </div>
                         <div class="col-md-2 col-xs-2 avatar">
-                            <img src="https://raw.githubusercontent.com/skumaran123/testSpeechAPK/master/avatar.jpg" class=" img-responsive ">
+                            <img src="" class=" img-responsive ">
                         </div>
                     </div>
                     <div class="row msg_container base_receive receivediv hidden">
                         <div class="col-md-2 col-xs-2 avatar">
-                            <img src="https://raw.githubusercontent.com/skumaran123/testSpeechAPK/master/avatar.jpg" class=" img-responsive ">
+                            <img src="" class=" img-responsive ">
                         </div>
                         <div class="col-md-10 col-xs-10">
                             <div class="messages msg_receive">
@@ -57,7 +57,7 @@
                     </div>
                 </div>
 				<div class="msg_container np loadingdiv hidden">
-					<img src="https://raw.githubusercontent.com/skumaran123/testSpeechAPK/master/please_wait.gif" class="in_progress">
+					<img src="" class="in_progress">
 				</div>
                 <div class="panel-footer">
                     <div class="input-group">
