--- a/profilebot.html
+++ b/profilebot.html
@@ -14,7 +14,7 @@
     <div class="info-panel">
         <div class="info-title">
             <h1>Chat Widget</h1>
-            <h2> <a rel="nofollow" target="_new" href="#">Arvind</a></h2>
+            <h2> <a rel="nofollow" target="_new" href="#">Arvind Kumar G</a></h2>
         </div>
     </div>
     <div class="phone-canvas">
