--- a/profilebot.html
+++ b/profilebot.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Chat Widget</title>
+    <title>Arvind's Profile Bot</title>
     <meta name="viewport" content="width=device-width; height=device-height; initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="assets/styles.css">
     <script src="assets/jquery-1.12.1.min.js" type="text/javascript"></script>
@@ -13,8 +13,7 @@
 <body>
     <div class="info-panel">
         <div class="info-title">
-            <h1>Chat Widget</h1>
-            <h2> <a rel="nofollow" target="_new" href="#">Arvind Kumar G</a></h2>
+            <h1>Arvind's Profile Bot</h1>
         </div>
     </div>
     <div class="phone-canvas">
@@ -36,6 +35,21 @@
                 </div>
             </div>
             <div id="message-feed" class="message-feed message-feed-unscrolled">
+
+                <div class="message message-from">
+                    <div class="message-name">
+                        <h1>MyBot</h1>
+                    </div>
+                    <div class="message-body">
+                        <p>I am a bot who can give info about Arvind. I am built with Angular, JQuery, RestAPI and API.AI. Let's get started</p>
+                    </div>
+
+                    <div class="message-body">
+                        <p>Hi! </p>
+                    </div>
+
+                </div>
+
 
             </div>
             <div class="message-input-bar">
