--- a/profilebot.html
+++ b/profilebot.html
@@ -26,7 +26,9 @@
                         <div class="back-arrow-line back-arrow-line-3"></div>
                     </div>
                     <div class="phone-icon">
-                        <img src="image-store/icons/phone.png" height="50%">
+                        <a target='blank' href="https://www.linkedin.com/in/arvind-kumar-gopal-19b5823/">
+                            <img src="image-store/icons/lin.png" height="50%">
+                        </a>
                     </div>
                 </div>
                 <div class="user-header-image"></div>
@@ -41,7 +43,7 @@
                         <h1>MyBot</h1>
                     </div>
                     <div class="message-body">
-                        <p>I am a bot who can give info about Arvind. I am built with Angular, JQuery, RestAPI and API.AI. Let's get started</p>
+                        <p>I am a bot who can give info about Arvind. I am built with Angular, JQuery, API.AI, RestAPI and deployed in cloud. Let's get started</p>
                     </div>
 
                     <div class="message-body">
