--- a/profilebot.html
+++ b/profilebot.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Arvind's Profile Bot</title>
+    <title>Arvind Kumar. G - Profile Bot</title>
     <meta name="viewport" content="width=device-width; height=device-height; initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="assets/styles.css">
     <script src="assets/jquery-1.12.1.min.js" type="text/javascript"></script>
@@ -13,7 +13,7 @@
 <body>
     <div class="info-panel">
         <div class="info-title">
-            <h1>Arvind's Profile Bot</h1>
+            <h1>Arvind Kumar. G Profile Bot</h1>
         </div>
     </div>
     <div class="phone-canvas">
