--- a/profilebot.html
+++ b/profilebot.html
@@ -13,7 +13,7 @@
 <body>
     <div class="info-panel">
         <div class="info-title">
-            <h1>Arvind Kumar. G Profile Bot</h1>
+            <h1>Arvind Kumar. G - Profile Bot</h1>
         </div>
     </div>
     <div class="phone-canvas">
